--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ package-lock.json
 .env
 # macOS
 .DS_Store
+app.json
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
