--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,10 @@ npm-debug.*
 web-build/
 package-lock.json
 .env
+app.json
+config.ts
 # macOS
 .DS_Store
-app.json
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
