--- a/app.json
+++ b/app.json
@@ -16,6 +16,7 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.DaMoimApp"
     },
+    "extra": {},
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
